--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "sit725-2021-t2-prac3",
+  "name": "sit725-2021-t2-prac7",
   "version": "1.0.0",
-  "description": "sit 725 week 5 prac",
+  "description": "sit 725 week 7 prac",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "test" : "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,14 @@
   },
   "homepage": "https://github.com/ChoudharyNavit22/sit725-2021-t2-prac3#readme",
   "dependencies": {
+    "chai": "^4.3.10",
     "express": "^4.17.1",
-    "mongodb": "^6.3.0"
+    "mocha": "^10.2.0",
+    "mongodb": "^6.3.0",
+    "request": "^2.88.2",
+    "nodemon": "^3.0.1",
+    "socket.io": "^2.4.1",
+    "http-post": "^0.1.1",
+    "http-proxy": "^1.8.1"
   }
 }
