--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test" : "mocha --reporter spec"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,15 @@
   "homepage": "https://github.com/ChoudharyNavit22/sit725-2021-t2-prac3#readme",
   "dependencies": {
     "chai": "^4.3.10",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "http-post": "^0.1.1",
+    "http-proxy": "^1.8.1",
     "mocha": "^10.2.0",
     "mongodb": "^6.3.0",
-    "request": "^2.88.2",
     "nodemon": "^3.0.1",
-    "socket.io": "^2.4.1",
-    "http-post": "^0.1.1",
-    "http-proxy": "^1.8.1"
+    "request": "^2.88.2",
+    "socket.io": "^2.5.0",
+    "socket.io-client": "^4.7.2"
   }
 }
